{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 20,
  "lineage": "59a51c82-1cb4-71ac-518c-820d0694732f",
  "resources": [
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "swishvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:vpc/vpc-0e80ed18055d2c10a",
            "cidr_block": "10.130.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05aebe8529e2649c2",
                "cidr_block": "10.130.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0f5ca54a9ca9f4085",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Staging swishVPC"
                ]
              }
            ],
            "id": "vpc-0e80ed18055d2c10a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-032b7e5ec0560f6ca",
            "owner_id": "451445594773",
            "tags": {
              "Environment": "staging",
              "Name": "Staging swishVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swishSG-worker-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:security-group/sg-013879c21efdbaa37",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013879c21efdbaa37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.130.0.0/16"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "10.130.0.0/16"
                ],
                "description": "",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10251
              },
              {
                "cidr_blocks": [
                  "10.130.0.0/16"
                ],
                "description": "",
                "from_port": 10252,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10252
              },
              {
                "cidr_blocks": [
                  "10.130.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.130.0.0/16"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "10.130.0.0/16"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "10.130.0.0/16"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "terraform-20221225233805273800000003",
            "name_prefix": "terraform-",
            "owner_id": "451445594773",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Staging_env",
              "Name": "swisheks_sg"
            },
            "tags_all": {
              "Environment": "Staging_env",
              "Name": "swisheks_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e80ed18055d2c10a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.data.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "swish-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "45.48.74.58/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2201393763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-013879c21efdbaa37",
            "security_group_rule_id": "sgr-0f1180c7f6a5043dc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.swishSG-worker-cluster",
            "module.eks.data.aws_vpc.swishvpc",
            "module.eks.data.http.workstation-external-ip"
          ]
        }
      ]
    }
  ]
}